--- a/web/index.html
+++ b/web/index.html
@@ -27,6 +27,29 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-analytics.js"></script>
+
+  <script>
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    var firebaseConfig = {
+      apiKey: "AIzaSyD0wvy86ez3wpwNBe-khHTwhHtecnJ1lFE",
+      authDomain: "flutter-provaplotze.firebaseapp.com",
+      projectId: "flutter-provaplotze",
+      storageBucket: "flutter-provaplotze.appspot.com",
+      messagingSenderId: "269352765427",
+      appId: "1:269352765427:web:718e4deb33936926e6b486",
+      measurementId: "G-R7H6B98ZT8"
+    };
+  
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+  </script>
+
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
